# gaphor

./: .all-contributorsrc  .bettercodehub.yml  .coveragerc  .cvsignore  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .update-copyright.conf  AUTHORS  BUILD-WINDOWS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  ChangeLog  FAQ  HACKING  INSTALL-MACOS.md  ISSUE_TEMPLATE.md  LICENSE.txt  MANIFEST.in  Makefile  Makefile.am  NEWS  NEWS-pre-2.0  PULL_REQUEST_TEMPLATE.md  README  README.md  README.rst  RELEASE_CHECKLIST.md  REUSE.toml  SECURITY.md  TODO  (+41 more)
data/pixmaps/: Makefile.am  component.xcf  uml_icons.xcf
gaphor/UML/: .cvsignore  Element.py  Files  Makefile.am  UML_MetaModel.py  __init__.py  check-button-cell.ui  collection.py  compartments.py  context.py  copypaste.py  deletable.py  diagram.py  diagramitems.py  drop.py  element.py  elementdispatcher.py  elementfactory.py  enum.py  enumeration.py  event.py  group.py  iconname.py  informationflow.py  interfaces.py  listmixins.py  management.py  modelfactory.py  modelinglanguage.py  modelprovider.py  painter.py  presentation.py  properties.py  propertypages.py  propertypages.ui  recipes.py  sanitizerservice.py  sequence.py  shapes.py  text-field-cell.ui  (+14 more)
gaphor/UML/actions/: __init__.py  action.py  actionseditors.py  actionsgroup.py  actionsgrouping.py  actionspropertypages.py  actionstoolbox.py  activity.py  activityconnect.py  activitymove.py  activitynodes.py  activitypropertypage.py  copypaste.py  drop.py  dropzone.py  flow.py  flowconnect.py  gtkmodels.py  objectnode.py  parameter.ui  partition.py  partitionpage.py  pin.py  pinconnect.py  propertypages.glade  propertypages.ui
gaphor/UML/classes/: __init__.py  association.py  associationpropertypages.py  classconnect.py  classeseditors.py  classespropertypages.py  classestoolbox.py  component.py  containment.py  containmentconnect.py  copypaste.py  datatype.py  dependency.py  dependencypropertypages.py  enumeration.py  enumerationpropertypages.py  generalization.py  gtkmodels.py  implementation.py  interface.py  interfaceconnect.py  interfacerealization.py  klass.py  package.py  propertypages.glade  propertypages.ui  stereotype.py
gaphor/UML/components/: __init__.py  artifact.py  component.py  componentsgrouping.py  componentspropertypage.py  componentstoolbox.py  connector.py  connectorconnect.py  copypaste.py  node.py  propertypages.glade  propertypages.ui
gaphor/UML/deployments/: __init__.py  artifact.py  componentspropertypage.py  componentstoolbox.py  connector.py  connectorconnect.py  copypaste.py  deploymentpropertypage.py  deploymentsgroup.py  deploymentsgrouping.py  deploymentstoolbox.py  node.py  propertypages.glade  propertypages.ui
gaphor/UML/general/: __init__.py  comment.py  commenteditor.py  commentpropertypage.py  connectors.py  diagramitem.py  generaltoolbox.py  image.py  imagepropertypage.py
gaphor/UML/interactions/: __init__.py  copypaste.py  drop.py  executionspecification.py  interaction.py  interactionsconnect.py  interactionsgroup.py  interactionsgrouping.py  interactionspropertypages.py  interactionstoolbox.py  lifeline.py  message.py  propertypages.glade  propertypages.ui
gaphor/UML/profiles/: __init__.py  extension.py  extensionconnect.py  metaclasspropertypage.py  packageimport.py  packageimportconnect.py  profilestoolbox.py  propertypages.glade  propertypages.ui  stereotype-cell.ui  stereotype-name-cell.ui  stereotype-value-cell.ui  stereotypepropertypages.py
gaphor/UML/states/: __init__.py  copypaste.py  drop.py  dropzone.py  finalstate.py  group.py  propertypages.glade  propertypages.py  propertypages.ui  pseudostates.py  region.py  state.py  statemachine.py  statestoolbox.py  transition.py  vertexconnect.py
gaphor/UML/tests/: __init__.py  test_activity.py  test_collection.py  test_copypaste.py  test_diagram.py  test_diagramitems.py  test_diagrampage_tools.py  test_drop.py  test_elementdispatcher.py  test_elementfactory.py  test_group.py  test_iconname.py  test_interactions.py  test_modelfactory.py  test_presentation.py  test_properties.py  test_recipes.py  test_sanitizerservice.py  test_state_machine.py  test_treemodel.py  test_uml2.py  test_uml2_overrides.py  test_umlfmt.py  test_umllex.py
gaphor/UML/usecases/: __init__.py  actor.py  extend.py  include.py  usecase.py  usecaseconnect.py  usecasegroup.py  usecasegrouping.py  usecasetoolbox.py
gaphor/diagram/: .cvsignore  Files  Makefile.am  README  __init__.py  _connector.py  abc.py  action.py  actions.py  activitynodes.py  actor.c  actor.h  actor.py  adapters.py  align.py  artifact.py  association.py  attribute.py  classifier.c  classifier.h  classifier.py  classmember.py  comment-line.c  comment-line.h  comment.c  comment.h  comment.py  commentline.py  common.c  common.h  compartment.py  component.py  connector.py  connectors.py  copypaste.py  deletable.py  dependency.c  dependency.h  dependency.py  diagram.py  (+94 more)
gaphor/diagram/actions/: __init__.py  action.py  actionseditors.py  actionsgrouping.py  actionspropertypages.py  activitynodes.py  flow.py  flowconnect.py  objectnode.py  partition.py  partitionpage.py
gaphor/diagram/classes/: __init__.py  association.py  classconnect.py  classeseditors.py  classespropertypages.py  dependency.py  feature.py  generalization.py  implementation.py  interface.py  interfaceconnect.py  klass.py  package.py  stereotype.py
gaphor/diagram/components/: __init__.py  artifact.py  component.py  componentsgrouping.py  componentspropertypage.py  connector.py  connectorconnect.py  node.py  subsystem.py
gaphor/diagram/diagramtools/: __init__.py  connector.py  dnd.py  dropzone.py  grayout.py  placement.py  segment.py  shortcut.py  textedit.py  txtool.py
gaphor/diagram/general/: __init__.py  comment.py  commentline.py  connectors.py  coreimage.py  (+11 more)
gaphor/tree/: .cvsignore  Makefile.am  __init__.py  namespace.py  pytreemodel.defs  pytreemodel.override  treemodel.c  treemodel.defs  treemodel.h  treemodel.override  treemodelmodule.c
(+1802 files in other folders)
