pixmaps_DATA = \
	logo.png \
	actor16.png \
	actor24.png \
	association16.png \
	association24.png \
	class16.png \
	class24.png \
	comment16.png \
	comment24.png \
	dependency16.png \
	dependency24.png \
	diagram16.png \
	diagram24.png \
	extend24.png \
	generalization16.png \
	generalization24.png \
	include24.png \
	package16.png \
	package24.png \
	pointer16.png \
	pointer24.png \
	ucassociation16.png \
	ucassociation24.png \
	usecase16.png \
	usecase24.png

pixmapsdir=$(pkgdatadir)/pixmaps

EXTRA_DIST = $(pixmaps_DATA)

